.kube/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300s
spec:
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: ${CI_PROJECT_NAME}-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          
          - path: /api
            backend:
              serviceName: api
              servicePort: http- path: /admin
            backend:
              serviceName: api
              servicePort: http
          - path: /silk
            backend:
              serviceName: api
              servicePort: http
          - path: /dj_static
            backend:
              serviceName: static
              servicePort: http
